src/views/ordersPage/OrdersPage.module.scss
@use '@assets/styles/constants';

.wrapper {
  max-width: 600px;
  margin: 0 auto;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

.ordersList {
  display: flex;
  flex-direction: column;
  gap: 16px;
  margin-bottom: 16px;
}

.orderItem {
  cursor: pointer;
  transition: transform 0.2s ease;

  &:hover {
    transform: translateY(-2px);
  }
}

.emptyState {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  margin-top: 64px;
}

.emptyStateTitle {
  @include constants.text-h1;
  margin: 0 0 8px 0;
}

.emptyStateText {
  @include constants.text-regular;
}

